--- a/Data/Clean_data.ipynb
+++ b/Data/Clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(300, 53)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
     "df_full_post.dropna(subset=['shares'], inplace=True)\n",
     "df_full_post.dropna(subset=['comments'], inplace=True)\n",
     "df_full_post.dropna(subset=['comments_full'], inplace=True)\n",
-    "df_full_post.dropna(subset=['time'], inplace=True)\n"
+    "df_full_post.dropna(subset=['time'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "(165, 29)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "[10 rows x 29 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,29 +632,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_text</th>\n",
+       "      <th>reaction_count</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>shares</th>\n",
+       "      <th>time</th>\n",
+       "      <th>date_only</th>\n",
+       "      <th>hour_only</th>\n",
+       "      <th>video</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chỉ người từng trải mới hiểu  Only those who h...</td>\n",
+       "      <td>583</td>\n",
+       "      <td>111</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-11-18 23:21:21</td>\n",
+       "      <td>11-18-2023</td>\n",
+       "      <td>23-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t39.3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>z học bài mới dô 🤩  📷: trangcaoquocxeng</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>573</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2023-11-18 22:17:11</td>\n",
+       "      <td>11-18-2023</td>\n",
+       "      <td>22-17</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ủa tại sao vậy</td>\n",
+       "      <td>355</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-11-18 20:00:11</td>\n",
+       "      <td>11-18-2023</td>\n",
+       "      <td>20-00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://m.facebook.com/photo/view_full_size/?f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Lại bảo dễ đi :))</td>\n",
+       "      <td>764</td>\n",
+       "      <td>140</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-11-18 18:05:08</td>\n",
+       "      <td>11-18-2023</td>\n",
+       "      <td>18-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t39.3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>hình ảnh tui mỗi sáng =))</td>\n",
+       "      <td>511</td>\n",
+       "      <td>43</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2023-11-18 16:30:24</td>\n",
+       "      <td>11-18-2023</td>\n",
+       "      <td>16-30</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>đừng méc mẹ t :)) 📷: tn_7_1</td>\n",
+       "      <td>13071</td>\n",
+       "      <td>6200</td>\n",
+       "      <td>653</td>\n",
+       "      <td>2023-08-27 02:00:08</td>\n",
+       "      <td>08-27-2023</td>\n",
+       "      <td>02-00</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>sắp được gặp anh bé ruiiii</td>\n",
+       "      <td>13713</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>347</td>\n",
+       "      <td>2023-08-21 22:00:03</td>\n",
+       "      <td>08-21-2023</td>\n",
+       "      <td>22-00</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>\"Làm em vui thật khó\"?  \"Is it hard to please ...</td>\n",
+       "      <td>10801</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>516</td>\n",
+       "      <td>2023-08-18 16:09:41</td>\n",
+       "      <td>08-18-2023</td>\n",
+       "      <td>16-09</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>Tuổi trẻ có mấy lần? Vậy nên hãy sống hết mình...</td>\n",
+       "      <td>12650</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>742</td>\n",
+       "      <td>2023-08-17 16:19:17</td>\n",
+       "      <td>08-17-2023</td>\n",
+       "      <td>16-19</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>trung bình tâm trạng của con gái :))</td>\n",
+       "      <td>13578</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>368</td>\n",
+       "      <td>2023-08-10 02:00:33</td>\n",
+       "      <td>08-10-2023</td>\n",
+       "      <td>02-00</td>\n",
+       "      <td>https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>163 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Unnamed: 0', 'post_id', 'post_text', 'original_text', 'time',\n",
-       "       'timestamp', 'image', 'image_lowquality',\n",
-       "       'images_lowquality_description', 'video', 'video_id', 'video_thumbnail',\n",
-       "       'likes', 'comments', 'shares', 'post_url', 'links', 'user_id',\n",
-       "       'username', 'user_url', 'is_live', 'available', 'comments_full',\n",
-       "       'reactors', 'w3_fb_url', 'reactions', 'reaction_count', 'page_id',\n",
-       "       'image_id', 'date_only', 'hour_only'],\n",
-       "      dtype='object')"
+       "                                             post_text reaction_count  \\\n",
+       "2    Chỉ người từng trải mới hiểu  Only those who h...            583   \n",
+       "3              z học bài mới dô 🤩  📷: trangcaoquocxeng           2720   \n",
+       "4                                       Ủa tại sao vậy            355   \n",
+       "5                                    Lại bảo dễ đi :))            764   \n",
+       "6                            hình ảnh tui mỗi sáng =))            511   \n",
+       "..                                                 ...            ...   \n",
+       "160                        đừng méc mẹ t :)) 📷: tn_7_1          13071   \n",
+       "161                         sắp được gặp anh bé ruiiii          13713   \n",
+       "162  \"Làm em vui thật khó\"?  \"Is it hard to please ...          10801   \n",
+       "163  Tuổi trẻ có mấy lần? Vậy nên hãy sống hết mình...          12650   \n",
+       "164               trung bình tâm trạng của con gái :))          13578   \n",
+       "\n",
+       "    comments shares                time   date_only hour_only  \\\n",
+       "2        111      2 2023-11-18 23:21:21  11-18-2023     23-21   \n",
+       "3        573     46 2023-11-18 22:17:11  11-18-2023     22-17   \n",
+       "4         47      0 2023-11-18 20:00:11  11-18-2023     20-00   \n",
+       "5        140      1 2023-11-18 18:05:08  11-18-2023     18-05   \n",
+       "6         43     15 2023-11-18 16:30:24  11-18-2023     16-30   \n",
+       "..       ...    ...                 ...         ...       ...   \n",
+       "160     6200    653 2023-08-27 02:00:08  08-27-2023     02-00   \n",
+       "161     2500    347 2023-08-21 22:00:03  08-21-2023     22-00   \n",
+       "162     3000    516 2023-08-18 16:09:41  08-18-2023     16-09   \n",
+       "163     1200    742 2023-08-17 16:19:17  08-17-2023     16-19   \n",
+       "164     2600    368 2023-08-10 02:00:33  08-10-2023     02-00   \n",
+       "\n",
+       "                                                 video  \\\n",
+       "2                                                  NaN   \n",
+       "3    https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "4                                                  NaN   \n",
+       "5                                                  NaN   \n",
+       "6    https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "..                                                 ...   \n",
+       "160  https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "161  https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "162  https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "163  https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "164  https://scontent.fhph3-1.fna.fbcdn.net/v/t42.1...   \n",
+       "\n",
+       "                                                 image  \n",
+       "2    https://scontent.fhph3-1.fna.fbcdn.net/v/t39.3...  \n",
+       "3                                                  NaN  \n",
+       "4    https://m.facebook.com/photo/view_full_size/?f...  \n",
+       "5    https://scontent.fhph3-1.fna.fbcdn.net/v/t39.3...  \n",
+       "6                                                  NaN  \n",
+       "..                                                 ...  \n",
+       "160                                                NaN  \n",
+       "161                                                NaN  \n",
+       "162                                                NaN  \n",
+       "163                                                NaN  \n",
+       "164                                                NaN  \n",
+       "\n",
+       "[163 rows x 9 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_full_post.columns"
+    "new_order = ['post_text', 'reaction_count', 'comments', 'shares', 'time', 'date_only', 'hour_only', 'video', 'image']\n",
+    "df_full_post[new_order]"
    ]
   }
  ],
